--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "media-query"
   ],
   "scripts": {
-    "prepublish": "node_modules/babel-cli/bin/babel.js src --out-dir ./",
+    "clean": "rm -f postcss-plugin.js transform.js webpack-loader.js",
+    "prepublish": "npm run clean && node_modules/babel-cli/bin/babel.js src --out-dir ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "transform.js",
@@ -31,9 +32,15 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "add-module-exports"      
+    ]
   }
 }
